--- a/apps/userprofile/templates/userprofile/followers.html
+++ b/apps/userprofile/templates/userprofile/followers.html
@@ -9,20 +9,40 @@
                 <p>Num: {{ user.userprofile.followed_by.count }}</p>
             </div>
         </div>
-    <div class="columns">
-        <div class="column is-8">
-            {% for follower in user.userprofile.followed_by.all %}
-                <p><a href="{% url 'userprofile' follower.user.username %}">{{ follower.user.username }}</a></p>
-            {% empty %}
-                {% if request.user == user %}
-                    <p>Sorry, you don't have any followers!</p>
-                {% else %}
-                    <p>{{ user.username }} doesn't have any followers!</p>
-                {% endif %}
-            {% endfor %}
+        <div class="columns">
+            <div class="column is-8">
+                {% for follower in user.userprofile.followed_by.all %}
+                    {% if follower.user.userprofile.avatar %}
+                        <article class="media">
+                            <figure class="media-left">
+                                <p class="image is-64x64">
+                                    <a href="{% url 'userprofile' follower.user.username %}"><img
+                                            src="{{ follower.user.userprofile.avatar.url }}" alt="avatar"></a>
+                                </p>
+                                <hr>
+                            </figure>
+                            <div class="media-content">
+                                <div class="content">
+                                    <p>
+                                        <a href="{% url 'userprofile' follower.user.username %}">{{ follower.user.username }}</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </article>
+                    {% else %}
+                        <p><a href="{% url 'userprofile' follower.user.username %}">{{ follower.user.username }}</a></p>
+                    {% endif %}
+
+                {% empty %}
+                    {% if request.user == user %}
+                        <p>Sorry, you don't have any followers!</p>
+                    {% else %}
+                        <p>{{ user.username }} doesn't have any followers!</p>
+                    {% endif %}
+                {% endfor %}
 
 
+            </div>
         </div>
-    </div>
     </div>
 {% endblock %}
