--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -46,6 +46,7 @@
         <div class="navbar-end">
             {% if request.user.is_authenticated %}
                 <a href="{% url 'inside' %}" class="navbar-item">Inside</a>
+                <a href="{% url 'conversations' %}" class="navbar-item">Conversations</a>
                 <a href="{% url 'userprofile' request.user.username %}" class="navbar-item">Profile</a>
                 <a href="{% url 'edit_profile' %}" class="navbar-item">Edit profile</a>
             {% endif %}
