--- a/apps/userprofile/templates/userprofile/userprofile.html
+++ b/apps/userprofile/templates/userprofile/userprofile.html
@@ -20,6 +20,7 @@
                 <p><a href="{% url 'follows' user.username %}">Follows: {{ user.userprofile.follows.count }}</a></p>
 
                 {% if user != request.user %}
+                    <a href="{% url 'conversation' user.id %}" class="button is-info">Send message              </a>
                     {% if request.user.userprofile in user.userprofile.followed_by.all %}
                         <a href="{% url 'unfollow_reporter' user.username %}" class="button is-danger">Unfollow</a>
 
