--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -45,6 +45,7 @@
         </div>
         <div class="navbar-end">
             {% if request.user.is_authenticated %}
+                <a href="{% url 'notifications' %}" class="navbar-item">Notifications({{ notifications.count }})</a>
                 <a href="{% url 'inside' %}" class="navbar-item">Inside</a>
                 <a href="{% url 'conversations' %}" class="navbar-item">Conversations</a>
                 <a href="{% url 'userprofile' request.user.username %}" class="navbar-item">Profile</a>
